# mindspore

./: .cmake-format.yaml  .editorconfig  CMakeLists.txt
cmake/: dependency_graphengine.cmake  mind_expression.cmake  options.cmake  utils.cmake
cmake/external_libs/: absl.cmake  c-ares.cmake  cppjieba.cmake  eigen.cmake  flatbuffers.cmake  glog.cmake  grpc.cmake  gtest.cmake  icu4c.cmake  jpeg_turbo.cmake  json.cmake  libevent.cmake  libtiff.cmake  mkl_dnn.cmake  nccl.cmake  ompi.cmake  opencv.cmake  openssl.cmake  protobuf.cmake  pybind11.cmake  re2.cmake  sentencepiece.cmake  sqlite.cmake  tinyxml2.cmake  zlib.cmake
cmake/modules/: FindEigen3.cmake  FindFlatbuffers.cmake  FindGTest.cmake  FindLibevent.cmake  FindOpenCV.cmake  FindOpenSSL.cmake  FindTIFF.cmake  FindTemplate.cmake  FindTurboJPEG.cmake  Findabsl.cmake  Findc-ares.cmake  Findcppjieba.cmake  FindgRPC.cmake  Findglog.cmake  Findnccl.cmake  Findnlohmann_json.cmake  Findpybind11.cmake  Findre2.cmake  Findsentencepiece.cmake  Findtinyxml2.cmake
cmake/modules/absl/: 20200923.cmake  20210324.cmake  20211102.cmake
cmake/modules/opencv/: 4.0.cmake  4.1.cmake  4.2.cmake  4.3.cmake  4.4.cmake  4.5.cmake  5.0.cmake
docs/api/api_python/: mindspore.ops.rst
mindspore/ccsrc/: CMakeLists.txt
mindspore/ccsrc/backend/common/optimizer/: CMakeLists.txt
mindspore/ccsrc/backend/common/pass/: CMakeLists.txt
mindspore/ccsrc/backend/common/session/: CMakeLists.txt  ascend_auto_monad.cc  ascend_session.cc
mindspore/ccsrc/backend/common/somas/: CMakeLists.txt  somas_solver_core.cc
mindspore/ccsrc/backend/graph_compiler/: CMakeLists.txt
mindspore/ccsrc/common/: CMakeLists.txt
mindspore/ccsrc/common/graph_kernel/: add_atomic_clean.cc  parallel_fusion.cc
mindspore/ccsrc/common/mem_reuse/: CMakeLists.txt
mindspore/ccsrc/cxx_api/: CMakeLists.txt
mindspore/ccsrc/debug/: CMakeLists.txt  env_config_parser.h
mindspore/ccsrc/distributed/: CMakeLists.txt
mindspore/ccsrc/fl/: CMakeLists.txt
mindspore/ccsrc/frontend/operator/: CMakeLists.txt
mindspore/ccsrc/frontend/optimizer/: CMakeLists.txt
mindspore/ccsrc/frontend/parallel/: CMakeLists.txt
mindspore/ccsrc/frontend/parallel/auto_parallel/rec_core/: rec_cost.h
mindspore/ccsrc/kernel/: CMakeLists.txt
mindspore/ccsrc/kernel/akg/: akg_kernel_json_generator.cc
mindspore/ccsrc/minddata/dataset/: CMakeLists.txt
mindspore/ccsrc/minddata/dataset/api/: CMakeLists.txt
mindspore/ccsrc/minddata/dataset/callback/: CMakeLists.txt
mindspore/ccsrc/minddata/dataset/core/: CMakeLists.txt  pybind_support.h
mindspore/ccsrc/minddata/dataset/engine/: CMakeLists.txt  dataset_iterator.cc
mindspore/ccsrc/minddata/dataset/engine/perf/: CMakeLists.txt
mindspore/ccsrc/minddata/dataset/kernels/: CMakeLists.txt
mindspore/ccsrc/minddata/dataset/kernels/image/soft_dvpp/utils/: CMakeLists.txt  soft_dp_log.h
mindspore/ccsrc/minddata/dataset/plugin/: CMakeLists.txt
mindspore/ccsrc/minddata/dataset/text/: CMakeLists.txt  vocab.cc
mindspore/ccsrc/minddata/dataset/text/ir/kernels/: CMakeLists.txt
mindspore/ccsrc/minddata/dataset/util/: CMakeLists.txt  btree.h
mindspore/ccsrc/minddata/mindrecord/: CMakeLists.txt
mindspore/ccsrc/pipeline/jit/: CMakeLists.txt
mindspore/ccsrc/pipeline/pynative/: CMakeLists.txt
mindspore/ccsrc/plugin/device/gpu/kernel/cuda_impl/cuda_ops/: CMakeLists.txt  adagrad_impl.cu  adam_impl.cu  adaptive_avg_pool2d_grad_impl.cu  adaptive_avg_pool2d_impl.cu  apply_gradient_descent_impl.cu  argmax_impl.cuh  assign_add_impl.cuh  batchnorm_fold2_impl.cu  batchnorm_grad_impl.cu  batchtospace_impl.cu  bce_with_logits_loss_impl.cu  broadcast_impl.cu  cast_all_impl.cu  cast_impl.cu  check_valid_impl.cu  clip_grad_norm_impl.cu  concatv2_impl.cu  crop_and_resize_impl.cu  cumprod_impl.cu  cumsum_impl.cu  depthtospace_impl.cu  determinant_triangle_impl.cu  dropout3d_impl.cu  dropout_impl.cu  einsum_impl.cuh  embedding_lookup_impl.cu  equalcount_impl.cu  extract_image_patches_impl.cu  fill_impl.cu  float_status_impl.cu  ftrl_impl.cu  gather.cu  gathernd.cu  gatherv2.cu  gelu_impl.cu  general_reduction_impl.cu  hsigmoid_impl.cu  hswish_impl.cu  in_top_k_impl.cu  (+46 more)
mindspore/ccsrc/profiler/: CMakeLists.txt
mindspore/ccsrc/ps/: CMakeLists.txt  optimizer_info.cc
mindspore/ccsrc/ps/core/: abstract_node.cc  scheduler_recovery.cc
mindspore/ccsrc/ps/ps_cache/: CMakeLists.txt
mindspore/ccsrc/ps/random_normal/: random_normal.h
mindspore/ccsrc/pybind_api/: CMakeLists.txt  pybind_patch.h
mindspore/ccsrc/pybind_api/ir/: tensor_py.h
mindspore/ccsrc/runtime/collective/: CMakeLists.txt
mindspore/ccsrc/runtime/device/: CMakeLists.txt
mindspore/ccsrc/runtime/graph_scheduler/: CMakeLists.txt  control_node_parser.cc  control_node_scheduler.cc
mindspore/ccsrc/runtime/hardware/: CMakeLists.txt
mindspore/ccsrc/runtime/op_builder/: CMakeLists.txt
mindspore/ccsrc/transform/express_ir/: CMakeLists.txt
mindspore/ccsrc/utils/: CMakeLists.txt
mindspore/core/: CMakeLists.txt
mindspore/core/base/: base_ref.h
mindspore/core/mindrt/: CMakeLists.txt
mindspore/core/utils/: log_adapter.cc  log_adapter.h
mindspore/lite/: CMakeLists.txt
mindspore/lite/cmake/: compile_link_option.cmake  secure_option.cmake
mindspore/lite/examples/converter_extend/: CMakeLists.txt
mindspore/lite/examples/runtime_cpp/: CMakeLists.txt
mindspore/lite/examples/runtime_extend/: CMakeLists.txt
mindspore/lite/examples/runtime_gpu_extend/: CMakeLists.txt
mindspore/lite/java/native/: CMakeLists.txt
mindspore/lite/minddata/: CMakeLists.txt
mindspore/lite/minddata/example/: CMakeLists.txt
mindspore/lite/src/delegate/tensorrt/: CMakeLists.txt
mindspore/lite/tools/dataset/cropper/: CMakeLists.txt
tests/: CMakeLists.txt
tests/ut/cpp/: CMakeLists.txt
tests/ut/cpp/abstract/: dshape_test.cc
tests/ut/cpp/dataset/: mind_record_op_test.cc
tests/ut/cpp/dataset/common/: common.cc
tests/ut/cpp/debug/: memory_dumper_test.cc
tests/ut/cpp/device/: ge_runtime_test.cc
tests/ut/cpp/stub/runtime/: cublas.cc  cuda_runtime_api.cc  cuda_runtime_api.h  cudnn.cc  cusolver.cc
(+49 files in other folders)
